# platanus-hack-25-team-39

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  justfile  platanus-hack-project.json  project-description.md  railway.backend.toml.backup  railway.frontend.toml.backup  railway.toml.backup
backend/: .gitignore  asgi.py  llm_map.py  models.py  nodes.py  prompts.py  pyproject.toml  railway.toml  state.py  wsgi.py
backend/agent/: models.py  prompts.py  state.py
backend/apps/auditlog/: __init__.py  api.py  apps.py  services.py
backend/apps/conflict_detector/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py  services.py
backend/apps/proyectos_ley/: __init__.py  admin.py  api.py  apps.py  models.py
backend/apps/users/: admin.py  apps.py  tasks.py  views.py
backend/auditlog/: admin.py  models.py
backend/auditlog/management/: __init__.py
backend/auditlog/migrations/: 0001_initial.py
backend/auditlog/tests/: __init__.py
backend/conf/: settings.py  urls.py
backend/conflict_detector/: __init__.py  services.py
backend/conflict_detector/agent/: graph.py  nodes.py
backend/conflict_detector/migrations/: __init__.py
backend/conflict_detector/tests/: __init__.py
backend/data/: resultado_deteccion.json
backend/data/proyectos_ley/: 1.json  2.json  4.json  5.json  6.json
backend/docker/: Dockerfile  entrypoint.sh
backend/migrations/: __init__.py
backend/proyectos_ley/: 3.json
backend/users/: forms.py  models.py
backend/users/api/: views.py
backend/users/migrations/: 0001_initial.py
(+46 files in other folders)
